@@ -12,6 +12,7 @@ import ru.darujo.dto.MapStringFloat;
 import ru.darujo.dto.PageDto;
 import ru.darujo.dto.PageObjDto;
 import ru.darujo.dto.calendar.WeekWorkDto;
+import ru.darujo.dto.project.ProjectDto;
 import ru.darujo.dto.user.UserDto;
 import ru.darujo.dto.workperiod.WorkUserTime;
 import ru.darujo.dto.workrep.*;
@@ -20,8 +21,7 @@ import ru.darujo.integration.CalendarServiceIntegration;
 import ru.darujo.integration.TaskServiceIntegration;
 import ru.darujo.integration.UserServiceIntegration;
 import ru.darujo.integration.WorkTimeServiceIntegration;
-import ru.darujo.model.Work;
-import ru.darujo.model.WorkLittle;
+import ru.darujo.model.*;
 
 import java.sql.Timestamp;
 import java.util.*;
@@ -44,7 +44,7 @@ public class WorkRepService {
         this.workTimeServiceIntegration = workTimeServiceIntegration;
     }
 
-    UserServiceIntegration userServiceIntegration;
+    private UserServiceIntegration userServiceIntegration;
 
     @Autowired
     public void setUserServiceIntegration(UserServiceIntegration userServiceIntegration) {
@@ -58,60 +58,134 @@ public class WorkRepService {
         this.workService = workService;
     }
 
-    CalendarServiceIntegration calendarServiceIntegration;
+    private CalendarServiceIntegration calendarServiceIntegration;
 
     @Autowired
     public void setCalendarServiceIntegration(CalendarServiceIntegration calendarServiceIntegration) {
         this.calendarServiceIntegration = calendarServiceIntegration;
     }
 
-    public List<WorkRepDto> getWorkRep(String name, Boolean availWork, Integer stageZiGe, Integer stageZiLe, Long releaseId, String[] sort) {
+    private WorkProjectService workProjectService;
+
+    @Autowired
+    public void setWorkProjectService(WorkProjectService workProjectService) {
+        this.workProjectService = workProjectService;
+    }
+
+    public List<WorkRepDto> getWorkRep(String name, Boolean availWork, Integer stageZiGe, Integer stageZiLe, Long releaseId, Long projectIdPar, String[] sort, Boolean addMedium) {
+        workService.init();
         List<WorkRepDto> workRepDTOs = new ArrayList<>();
-        List<Work> works = workService.getWorkList(name, stageZiGe, stageZiLe, releaseId, sort);
+        List<Work> works;
+        if (projectIdPar != null) {
+            works = workService.getWorkList(name, stageZiGe, stageZiLe, releaseId, projectIdPar, sort);
+        } else {
+            works = workService.getWorkList(name, stageZiGe, stageZiLe, releaseId, sort);
+        }
+        WorkRepDto workRepDto;
+        if (addMedium) {
+            workRepDto = new WorkRepDto(null, null, "Сдение по оцененым ЗИ", new ArrayList<>());
+        } else {
+            workRepDto = null;
+        }
+        Map<Long, WorkRepProjectDto> workRepProjectDtoMap = new HashMap<>();
+
         works.forEach(work ->
                 {
-                    boolean availWorkTime = false;
-                    if (availWork != null) {
-                        availWorkTime = taskServiceIntegration.availWorkTime(work.getId());
-                    }
-                    if (availWork == null ||
-                            (availWork && availWorkTime) ||
-                            (!availWork && !availWorkTime)) {
+                    List<WorkRepProjectDto> workRepProjectDtoList = new ArrayList<>();
+                    work.getProjectList().stream().filter(projectId -> projectIdPar == null || projectId.equals(projectIdPar)).forEach(projectId -> {
+                        boolean availWorkTime = false;
+                        if (availWork != null) {
+                            availWorkTime = taskServiceIntegration.availWorkTime(work.getId(), projectId);
+                        }
+                        if (availWork == null ||
+                                (availWork && availWorkTime) ||
+                                (!availWork && !availWorkTime)) {
+                            WorkProject workProject = workProjectService.getWorkProjectOrEmpty(work, projectId);
+                            ProjectDto projectDto = WorkService.getProjectDto(projectId);
+                            WorkRepProjectDto workRepProjectDto = new WorkRepProjectDto(work.getId(),
+                                    projectId,
+                                    workProject.getStartTaskPlan(),
+                                    workProject.getStartTaskFact(),
+                                    workProject.getAnaliseEndPlan(),
+                                    workProject.getAnaliseEndFact(),
+                                    workProject.getIssuePrototypePlan(),
+                                    workProject.getIssuePrototypeFact(),
+                                    workProject.getDebugEndPlan(),
+                                    workProject.getDebugEndFact(),
+                                    workProject.getRelease() != null ? workProject.getRelease().getName() : null,
+                                    workProject.getRelease() != null ? workProject.getRelease().getIssuingReleasePlan() : null,
+                                    workProject.getRelease() != null ? workProject.getRelease().getIssuingReleaseFact() : null,
+                                    workProject.getReleaseEndPlan(),
+                                    workProject.getReleaseEndFact(),
+                                    workProject.getOpeEndPlan(),
+                                    workProject.getOpeEndFact(),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 0),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 1),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 2),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 3),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 4),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 5),
+                                    workProject.getIssuePrototypePlan(),
+                                    workProject.getIssuePrototypeFact(),
+                                    workProject.getRated()
+
+                            );
+                            workService.updateProjectInfo(workRepProjectDto);
+                            workRepProjectDtoList.add(workRepProjectDto);
+
+                        }
+                    });
+                    if (!workRepProjectDtoList.isEmpty()) {
+
+                        workRepProjectDtoList.forEach(workRepProjectDto -> {
+                            workService.updWorkPlanTime(workRepProjectDto);
+
+                            if (addMedium && workRepProjectDto.getRated() != null && workRepProjectDto.getRated()) {
+                                WorkRepProjectDto workRepProjectDtoTotal = workRepProjectDtoMap.computeIfAbsent(workRepProjectDto.getProjectId(), projectId ->
+                                {
+                                    WorkRepProjectDto workRepProjectDtoNew = new WorkRepProjectDto(null, workRepProjectDto.getProjectId(), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, 0f, 0f, 0f, 0f, 0f, 0f, null, null, true);
+                                    workRepProjectDtoNew.setLaborAnalise(0f);
+                                    workRepProjectDtoNew.setLaborDevelop(0f);
+                                    workRepProjectDtoNew.setLaborDebug(0f);
+                                    workRepProjectDtoNew.setLaborRelease(0f);
+                                    workRepProjectDtoNew.setLaborOPE(0f);
+                                    workRepDto.getWorkRepProjectDtoList().add(workRepProjectDtoNew);
+                                    return workRepProjectDtoNew;
+                                });
+                                workRepProjectDtoTotal.addLaborAnalise(workRepProjectDto.getLaborAnalise());
+                                workRepProjectDtoTotal.addLaborDevelop(workRepProjectDto.getLaborDevelop());
+                                workRepProjectDtoTotal.addLaborDebug(workRepProjectDto.getLaborDebug());
+                                workRepProjectDtoTotal.addLaborRelease(workRepProjectDto.getLaborRelease());
+                                workRepProjectDtoTotal.addLaborOPE(workRepProjectDto.getLaborOPE());
+                                workRepProjectDtoTotal.addTimeAnalise(workRepProjectDto.getTimeAnalise());
+                                workRepProjectDtoTotal.addTimeDevelop(workRepProjectDto.getTimeDevelop());
+                                workRepProjectDtoTotal.addTimeDebug(workRepProjectDto.getTimeDebug());
+                                workRepProjectDtoTotal.addTimeRelease(workRepProjectDto.getTimeRelease());
+                                workRepProjectDtoTotal.addTimeOPE(workRepProjectDto.getTimeOPE());
+                                workRepProjectDtoTotal.addTimeWender(workRepProjectDto.getTimeWender());
+                                workRepProjectDtoTotal.addCountOne();
+
+                            }
+                        });
                         workRepDTOs.add(
                                 new WorkRepDto(
                                         work.getId(),
                                         work.getCodeZi(),
                                         work.getName(),
-                                        work.getStartTaskPlan(),
-                                        work.getStartTaskFact(),
-                                        work.getAnaliseEndPlan(),
-                                        work.getAnaliseEndFact(),
-                                        work.getIssuePrototypePlan(),
-                                        work.getIssuePrototypeFact(),
-                                        work.getDebugEndPlan(),
-                                        work.getDebugEndFact(),
-                                        work.getRelease() != null ? work.getRelease().getName() : null,
-                                        work.getRelease() != null ? work.getRelease().getIssuingReleasePlan() : null,
-                                        work.getRelease() != null ? work.getRelease().getIssuingReleaseFact() : null,
-                                        work.getReleaseEndPlan(),
-                                        work.getReleaseEndFact(),
-                                        work.getOpeEndPlan(),
-                                        work.getOpeEndFact(),
-                                        getFactWork(work, 0),
-                                        getFactWork(work, 1),
-                                        getFactWork(work, 2),
-                                        getFactWork(work, 3),
-                                        getFactWork(work, 4),
-                                        getFactWork(work, 5),
-                                        work.getIssuePrototypePlan(),
-                                        work.getIssuePrototypeFact()
-
+                                        workRepProjectDtoList
                                 )
                         );
                     }
                 }
         );
-        workRepDTOs.forEach(workService::updWorkPlanTime);
+        if (workRepDto != null) {
+            workRepDto.getWorkRepProjectDtoList().forEach(workRepProjectDto -> {
+                workRepProjectDto.applyCount();
+                workService.updateProjectInfo(workRepProjectDto);
+            });
+
+            workRepDTOs.add(workRepDto);
+        }
         return workRepDTOs;
     }
 
@@ -130,9 +204,15 @@ public class WorkRepService {
                                                boolean hideNotTime) {
         AtomicInteger num = new AtomicInteger();
         List<WorkFactDto> workFactDTOs = new ArrayList<>();
-        Page<@NonNull Work> workPage = workService.findWorks(page, size, nameZi, sort, stageZiGe, stageZiLe, codeSap, codeZiSearch, task, releaseId, null);
-        workPage.forEach(work -> {
-                    Set<String> users = taskServiceIntegration.getListUser(work.getId(), null).getList();
+        Page<@NonNull Work> workPage = workService.findWorks(page, size, nameZi, sort, stageZiGe, stageZiLe, codeSap, codeZiSearch, task, releaseId);
+        workPage.forEach(work -> work.getProjectList().forEach(projectId ->
+                {
+                    ProjectDto projectDto = WorkService.getProjectDto(projectId);
+
+                    WorkFactDto workFactDto = null;
+                    int userProject = 0;
+                    WorkProject workProject = workProjectService.getWorkProjectOrEmpty(work, projectId);
+                    Set<String> users = taskServiceIntegration.getListUser(work.getId(), projectId, null).getList();
                     if (userName != null) {
                         if (users.contains(userName)) {
                             users = new HashSet<>();
@@ -144,10 +224,11 @@ public class WorkRepService {
                     if (users != null && !users.isEmpty()) {
                         List<String> userList = new ArrayList<>(users);
                         for (int i = 0; i < users.size(); i++) {
+                            userProject++;
                             String user = userList.get(i);
                             String codeZi;
                             String name;
-                            if (i == 0) {
+                            if (workFactDto == null) {
                                 codeZi = work.getCodeZi();
                                 name = work.getName();
                             } else {
@@ -160,69 +241,74 @@ public class WorkRepService {
                             } catch (ResourceNotFoundRunTime ex) {
                                 userDto = new UserDto(-1L, "", "логином", "Не найден пользователь с", user, false);
                             }
-                            workFactDTOs.add(
-                                    new WorkFactDto(
-                                            num.incrementAndGet(),
-                                            codeZi,
-                                            name,
-                                            users.size(),
-                                            user,
-                                            userDto.getFirstName(),
-                                            userDto.getLastName(),
-                                            userDto.getPatronymic(),
-                                            getFactWork(work, 0, user),
-                                            getFactWork(work, 1, user),
-                                            getFactWork(work, 2, user),
-                                            getFactWork(work, 3, user),
-                                            getFactWork(work, 4, user),
-                                            getFactWork(work, 5, user)
-                                    )
+                            workFactDto = new WorkFactDto(
+                                    num.incrementAndGet(),
+                                    codeZi,
+                                    name,
+                                    users.size(),
+                                    user,
+                                    userDto.getFirstName(),
+                                    userDto.getLastName(),
+                                    userDto.getPatronymic(),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 0, user),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 1, user),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 2, user),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 3, user),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 4, user),
+                                    getFactWork(workProject, projectDto.getStageEnd(), 5, user)
                             );
+                            workFactDTOs.add(workFactDto);
 
                         }
+
                     } else {
                         if (!hideNotTime) {
-                            workFactDTOs.add(
-                                    new WorkFactDto(
-                                            num.incrementAndGet(),
-                                            work.getCodeZi(),
-                                            work.getName(),
-                                            1,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null,
-                                            null
+                            userProject++;
+                            workFactDto = new WorkFactDto(
+                                    num.incrementAndGet(),
+                                    work.getCodeZi(),
+                                    work.getName(),
+                                    1,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null,
+                                    null
 
-                                    )
+                            );
+                            workFactDTOs.add(
+                                    workFactDto
                             );
                         }
                     }
-
-                }
+                    if (workFactDto != null) {
+                        workFactDto.setUserCol(userProject);
+                    }
+                })
         );
         return new PageDto<>(workPage.getTotalPages(), workPage.getNumber(), workPage.getSize(), workFactDTOs);
     }
 
-    public MapStringFloat getFactWorkStage(Long workId, String nikName, Integer stage) {
+    public MapStringFloat getFactWorkStage(Long workId, String nikName, Integer stage, Long projectId) {
         MapStringFloat mapStringFloat = new MapStringFloat();
         Map<String, Float> usersTime = new HashMap<>();
         mapStringFloat.setList(usersTime);
-        Work work = workService.findById(workId);
+        WorkFull workFull = workService.findById(workId, projectId);
         Set<String> users;
         if (nikName != null && !nikName.isEmpty()) {
             users = new HashSet<>();
             users.add(nikName);
         } else {
-            users = taskServiceIntegration.getListUser(workId, work.getIssuePrototypeFact()).getList();
+            users = taskServiceIntegration.getListUser(workId, projectId, null).getList();
         }
+        ProjectDto projectDto = WorkService.getProjectDto(projectId);
         users.forEach(user -> {
-            Float time = getFactWork(work, stage, user);
+            Float time = getFactWork(workFull.getWorkProject(), projectDto.getStageEnd(), stage, user);
             if (time > 0) {
                 usersTime.put(user, time);
             }
@@ -230,59 +316,81 @@ public class WorkRepService {
         return mapStringFloat;
     }
 
-    public Float getFactWork(Long workId, Integer stage, String nikName) {
-        Work work = workService.findById(workId);
-        return getFactWork(work, stage, nikName);
+    private Float getFactWork(WorkProject workProject, Integer stageEnd, Integer stage) {
+        return getFactWork(workProject, stageEnd, stage, null);
     }
 
-    private Float getFactWork(Work work, Integer stage) {
-        return getFactWork(work, stage, null);
-    }
-
-    public Float getFactWork(Work work, Integer stage, String nikName) {
+    public Float getFactWork(WorkProject workProject, Integer projectStageEnd, Integer stage, String nikName) {
         if (stage == 0) {
-            return taskServiceIntegration.getTimeWork(work.getId(),
+            return taskServiceIntegration.getTimeWork(
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
                     null,
-                    getTimeDevelop(work),
+                    projectStageEnd != null && projectStageEnd == 1 ? workProject.getAnaliseEndFact() : getTimeDevelop(workProject),
                     "analise");
         }
-        if (stage == 1) {
+        if (stage == 1 && (projectStageEnd == null || projectStageEnd > 1)) {
             return taskServiceIntegration.getTimeWork(
-                    work.getId(),
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
                     null,
-                    getTimeDevelop(work),
+                    getTimeDevelop(workProject),
                     "develop");
         }
-        if (stage == 2) {
-            return taskServiceIntegration.getTimeWork(work.getId(),
+        if (stage == 2 && (projectStageEnd == null || projectStageEnd > 2)) {
+            return taskServiceIntegration.getTimeWork(
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
-                    getTimeDevelop(work),
-                    work.getDebugEndFact());
+                    getTimeDevelop(workProject),
+                    workProject.getDebugEndFact());
         }
-        if (stage == 3) {
-            return taskServiceIntegration.getTimeWork(work.getId(),
+        if (stage == 3 && (projectStageEnd == null || projectStageEnd > 3)) {
+            return taskServiceIntegration.getTimeWork(
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
-                    work.getDebugEndFact(),
-                    work.getReleaseEndFact());
+                    workProject.getDebugEndFact(),
+                    workProject.getReleaseEndFact());
         }
-        if (stage == 4) {
-            return taskServiceIntegration.getTimeWork(work.getId(),
+        if (stage == 4 && (projectStageEnd == null || projectStageEnd > 4)) {
+            return taskServiceIntegration.getTimeWork(
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
-                    work.getReleaseEndFact(),
-                    work.getOpeEndFact());
+                    workProject.getReleaseEndFact(),
+                    workProject.getOpeEndFact());
         }
         if (stage == 5) {
-            taskServiceIntegration.getTimeWork(work.getId(),
+            Timestamp timestamp = null;
+            if (projectStageEnd == null) {
+                timestamp = workProject.getOpeEndFact();
+            } else if (projectStageEnd == 1) {
+                timestamp = workProject.getAnaliseEndFact();
+            } else if (projectStageEnd == 2) {
+                timestamp = getTimeDevelop(workProject);
+            } else if (projectStageEnd == 3) {
+                timestamp = workProject.getDebugEndFact();
+            } else if (projectStageEnd == 4) {
+                timestamp = workProject.getReleaseEndFact();
+            } else if (projectStageEnd == 5) {
+                timestamp = workProject.getOpeEndFact();
+            }
+
+
+            taskServiceIntegration.getTimeWork(
+                    workProject.getWork().getId(),
+                    workProject.getProjectId(),
                     nikName,
-                    work.getOpeEndFact(),
+                    timestamp,
                     null);
         }
         return 0f;
     }
 
-    private Timestamp getTimeDevelop(Work work) {
+    private Timestamp getTimeDevelop(WorkProject work) {
         Timestamp timestampDevelop;
         if (work.getIssuePrototypeFact() == null
                 && work.getDebugEndFact() == null
@@ -297,19 +405,20 @@ public class WorkRepService {
 
 
     public List<WorkUserTime> getWeekWork(boolean ziSplit, Boolean addTotal, String nikName, Boolean weekSplit, Timestamp dateStart, Timestamp dateEnd,
-                                          Integer page, Integer size, String name, Integer stageZiGe, Integer stageZiLe, Long codeSap, String codeZi, String task, List<Long> releaseIdList, String sort) {
+                                          Integer page, Integer size, String name, Long projectId, Integer stageZiGe, Integer stageZiLe, Long codeSap, String codeZi, String task, List<Long> releaseIdList, String sort) {
         List<WorkUserTime> workUserTimes = new ArrayList<>();
         if (ziSplit) {
-            Page<@NonNull WorkLittle> works = workService.findWorkLittle(page, size, name, sort, stageZiGe, stageZiLe, codeSap, codeZi, task, releaseIdList);
-            works.forEach(work ->
-                    workUserTimes.add(new WorkUserTime(
-                            work.getId(),
-                            work.getCodeSap(),
-                            work.getCodeZi(),
-                            work.getName(),
-                            work.getStageZi(),
-                            taskServiceIntegration.getWorkUserOrZi(work.getId(), nikName, addTotal))
-                    )
+            Page<@NonNull WorkLittleFull> works = workService.findWorkLittle(page, size, name, sort, stageZiGe, stageZiLe, codeSap, codeZi, task, releaseIdList, projectId);
+            works.forEach(workLittleFull -> {
+                        WorkLittle work = workLittleFull.getWork();
+                        workUserTimes.add(new WorkUserTime(
+                                work.getId(),
+                                work.getCodeSap(),
+                                work.getCodeZi(),
+                                work.getName(),
+                                taskServiceIntegration.getWorkUserOrZi(work.getId(), projectId, nikName, addTotal))
+                        );
+                    }
             );
 
         } else {
@@ -319,7 +428,6 @@ public class WorkRepService {
                     null,
                     null,
                     "Без ЗИ",
-                    null,
                     workTimeServiceIntegration.getWorkUserOrZiBig(null, nikName, addTotal, weekSplit, dateStart, dateEnd))
             );
 
@@ -341,13 +449,25 @@ public class WorkRepService {
                                                      Timestamp dateStart,
                                                      Timestamp dateEnd,
                                                      String period) {
+        workService.init();
         List<WeekWorkDto> weekWorkDTOs = calendarServiceIntegration.getPeriodTime(dateStart, dateEnd, period);
-        Page<@NonNull Work> workPage = workService.findWorks(page, size, nameZi, sort, stageZiGe, stageZiLe, codeSap, codeZiSearch, task, releaseId, null);
+        Page<@NonNull Work> workPage = workService.findWorks(page, size, nameZi, sort, stageZiGe, stageZiLe, codeSap, codeZiSearch, task, releaseId);
         List<WorkGraphDto> workGraphDTOs =
-                workPage.map(work -> new WorkGraphDto(WorkConvertor.getWorkLittleDto(work),
-                        weekWorkDTOs.stream().map(weekWorkDto -> new WorkPeriodColorDto(weekWorkDto, getColor(weekWorkDto, work, true))).collect(Collectors.toList()),
-                        weekWorkDTOs.stream().map(weekWorkDto -> new WorkPeriodColorDto(weekWorkDto, getColor(weekWorkDto, work, false))).collect(Collectors.toList())
-                )).toList();
+                workPage.map(work -> {
+                    List<ProjectGraphDto> projectGraphDtoList = new ArrayList<>();
+                    work.getProjectList().forEach(projectId -> {
+                        WorkProject workProject = workProjectService.getWorkProjectOrEmpty(work, projectId);
+                        ProjectGraphDto projectGraphDto = new ProjectGraphDto(projectId,
+                                weekWorkDTOs.stream().map(weekWorkDto -> new WorkPeriodColorDto(weekWorkDto, getColor(weekWorkDto, workProject, true))).collect(Collectors.toList()),
+                                weekWorkDTOs.stream().map(weekWorkDto -> new WorkPeriodColorDto(weekWorkDto, getColor(weekWorkDto, workProject, false))).collect(Collectors.toList())
+                        );
+                        workService.updateProjectInfo(projectGraphDto);
+                        projectGraphDtoList.add(projectGraphDto);
+                    });
+                    return new WorkGraphDto(WorkConvertor.getWorkLittleDto(work), projectGraphDtoList
+
+                    );
+                }).toList();
         WorkGraphsDto workFactDTOs = new WorkGraphsDto(weekWorkDTOs, workGraphDTOs);
 
         return new PageObjDto<>(workPage.getTotalPages(), workPage.getNumber(), workPage.getSize(), workFactDTOs);
@@ -356,7 +476,7 @@ public class WorkRepService {
 
     Map<Integer, ColorDto> colorDtoMap = new HashMap<>();
 
-    private ColorDto getColor(WeekWorkDto weekWorkDto, Work work, boolean plan) {
+    private ColorDto getColor(WeekWorkDto weekWorkDto, WorkProject work, boolean plan) {
         List<String> colorTypes;
         if (plan) {
             colorTypes = getPeriodPlanTypes(work, weekWorkDto.getDayStart(), weekWorkDto.getDayEnd());
@@ -378,7 +498,7 @@ public class WorkRepService {
 
     }
 
-    private List<String> getPeriodFactTypes(Work work, Timestamp dayStart, Timestamp dayEnd) {
+    private List<String> getPeriodFactTypes(WorkProject work, Timestamp dayStart, Timestamp dayEnd) {
         List<String> colorTypes = new ArrayList<>();
         if (isPeriodIntersect(work.getAnaliseStartFact(), work.getAnaliseEndFact(), dayStart, dayEnd)) {
             colorTypes.add("analise");
@@ -398,7 +518,7 @@ public class WorkRepService {
         return colorTypes;
     }
 
-    private List<String> getPeriodPlanTypes(Work work, Timestamp dayStart, Timestamp dayEnd) {
+    private List<String> getPeriodPlanTypes(WorkProject work, Timestamp dayStart, Timestamp dayEnd) {
         List<String> colorTypes = new ArrayList<>();
         if (isPeriodIntersect(work.getAnaliseStartPlan(), work.getAnaliseEndPlan(), dayStart, dayEnd)) {
             colorTypes.add("analise");
@@ -440,7 +560,7 @@ public class WorkRepService {
         color = null;
         types.forEach(type -> addColor(getColor(type)));
         if (color == null) {
-            return ColorHelper.WHITE;
+            return null;
         }
         color.save();
         return color;
